집 코드 수정

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BoardProject</name>
+	<name>BoardProjectH</name>
 	<comment></comment>
 	<projects>
 	</projects>
